[gd_scene load_steps=5 format=3 uid="uid://dt3ncynvpi5o4"]

[ext_resource type="Script" path="res://test_mold_pillar.gd" id="1_h4gsj"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_r4oex"]
radius = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_erj7b"]
albedo_color = Color(4.99357e-07, 0.335259, 0.0503199, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_2ap3r"]
material = SubResource("StandardMaterial3D_erj7b")
bottom_radius = 3.0
height = 0.001

[node name="MotherMold" type="Node3D"]
script = ExtResource("1_h4gsj")

[node name="MoldArea" type="Area3D" parent="."]

[node name="MoldCollision" type="CollisionShape3D" parent="MoldArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50302, 0)
shape = SubResource("CylinderShape3D_r4oex")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MoldArea/MoldCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.997192, 0)
mesh = SubResource("CylinderMesh_2ap3r")

[node name="MobTimer" type="Timer" parent="MoldArea"]
autostart = true

[node name="GrowthTimer" type="Timer" parent="MoldArea"]
autostart = true

[connection signal="timeout" from="MoldArea/MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="MoldArea/GrowthTimer" to="." method="_on_growth_timer_timeout"]
